# Gun-Detection

./: .gitignore  README.md  pyproject.toml  requirements.txt
Presentation/: Gun Detection.pptx
data/: DATASETS.md  gun-detection.sh
notebooks/: gunmen_dataset_sample.ipynb  model_eval.ipynb  upload_checkpoint_to_wandb.ipynb
scripts/: evaluate.py  infer_fcn.py  infer_rfdetr.py  infer_sliding_window.py  infer_yolo.py  train_model.py  webcam_rfdetr.py
src/: __init__.py  run_tests.py
src/config/: baseline_resnet18.py  constants.py  rfdetr_detection.py  sliding_window.py  yolo_detection.py
src/datasets/: __init__.py  gunmen_crop_dataset.py  gunmen_dataset.py  gunmen_yolo_datamodule.py
src/models/: __init__.py  classification_model.py  gunmen_rfdetr_lightning.py  gunmen_yolo_lightning.py  sliding_window_model.py
src/models/architectures/: mlp_backbone.py  resnet_backbone.py
src/tests/: __init__.py  test_classification_model.py  test_gunmen_dataset.py  test_gunmen_yolo_datamodule.py  test_mlp_backbone.py
src/utils/: config.py
tests/: test_mlp_backbone.py
