[project]
name = "gun-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click",
    "wandb",
    "scipy",
    "jupyter",
    "fiddle>=0.3.0",
    "lightning>=2.6.1",
    "matplotlib>=3.10.8",
    "notebook>=7.5.5",
    "numpy>=2.4.4",
    "pandas>=3.0.1",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "ultralytics>=8.4.52",
    "transformers>=5.9.0",
    "supervision>=0.27.0",
    "pycocotools>=2.0.11",
]

[dependency-groups]
dev = ["flake8", "isort>=6.0.1", "pytest>=8.4.1", "autopep8", "black", "autoflake"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "scripts"]

[project.scripts]
test = "scripts.run_tests:main"
format_project = "scripts.format:format"
train = "scripts.train_model:main"
infer_yolo = "scripts.infer_yolo:main"
infer_rfdetr = "scripts.infer_rfdetr:main"
